--- a/week3/tutorial2.ipynb
+++ b/week3/tutorial2.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# Tutorial 2: Validation\n",
     "\n",
-    "You can also create content with Jupyter Notebooks. This means that you can include\n",
-    "code blocks and their outputs in your book."
+    "In this tutorial, we will focus on different forms of model validation on the various models we have applied in the previous tutorials."
    ]
   },
   {
