--- a/_sources/week3/tutorial2.ipynb
+++ b/_sources/week3/tutorial2.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 4: Validation\n",
+    "# Tutorial 2: Validation\n",
     "\n",
-    "You can also create content with Jupyter Notebooks. This means that you can include\n",
-    "code blocks and their outputs in your book."
+    "In this tutorial, we will focus on different forms of model validation on the various models we have applied in the previous tutorials."
    ]
   },
   {
