push some fixes for tutorial1 week 4

--- a/week4/tutorial1.ipynb
+++ b/week4/tutorial1.ipynb
@@ -321,9 +321,22 @@
    "outputs": [],
    "source": [
     "landuse.loc[landuse.natural=='water','landuse'] = 'water'\n",
-    "landuse.loc[landuse.natural=='wetland','landuse'] = 'wetlands'\n",
-    "\n",
-    "\n",
+    "landuse.loc[landuse.natural=='wetland','landuse'] = 'wetlands'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we believe that all relevant categories are added, we may remove any remaining rows that have a **NaN** value for land use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "landuse = landuse.dropna(subset=['landuse'])"
    ]
   },
