--- a/_sources/week4/tutorial2.ipynb
+++ b/_sources/week4/tutorial2.ipynb
@@ -257,7 +257,7 @@
     "id": "IJrBotZevbZ6"
    },
    "source": [
-    "The download and zip in the cell above sometimes does not work. If that is indeed the case (e.g., when it seems to remain stuck), download the files manually through the link and upload them in the data folder for this week (as explained at the start of this tutorial.)"
+    "The download and zip in the cell above sometimes does not work. If that is indeed the case (e.g., when it seems to remain stuck), download the files manually through the link and upload them in the data folder for this notebook (which you can open at the left-hand side of the notebook within Google Collaboratory)."
    ]
   },
   {
