--- a/week4/tutorial2.ipynb
+++ b/week4/tutorial2.ipynb
@@ -1222,7 +1222,7 @@
    },
    "outputs": [],
    "source": [
-    "flood_damage_CLC = DamageScanner(landuse_map,flood_map_area,flood_curves,maxdam)[1]"
+    "flood_damage_CLC = DamageScanner(landuse_map,flood_map,flood_curves,maxdam)[1]"
    ]
   },
   {
